# python_features

./: README.md  main.py  pyproject.toml  requirements.txt  update_requirements.sh
.github/workflows/: python-app.yml  python_app_test.yml
commands/: autopep8  flake8  poetry  pyenv
notebooks/: interesting.ipynb  notebook.ipynb  pandas_features.ipynb  prepare_nb.py
python_features_lib/: paths.py  utils.py
requirements/: dvpt_dependencies.txt  env_requirements.sh  filtered-requirements-dev.txt  install.sh  requirements-dev.txt  requirements.txt  sudo_install.sh
tests/: prepare_tests.py  test_dependencies.py
