[tool.poetry]
name = "python-features"
version = "0.1.0"
description = ""
authors = ["Santo K Thomas"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_features_lib"}]

[tool.poetry.dependencies]
# python = "^3.8"
python = "3.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
flake8 = "*"
autopep8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


