[tool.poetry]
name = "python-features"
version = "0.1.0"
description = ""
authors = ["Santo K Thomas <santokalayil@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_features_lib"}]

[tool.poetry.dependencies]
# python = "^3.8"
python = "^3.11"
pandas = "^2.0.3"
names-generator = "^0.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
flake8 = "^6.1.0"
autopep8 = "^2.0.2"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


